syntax = "proto3";

package customer.v1;

option go_package = "github.com/0utl1er-tech/phox-customer/gen/pb/customer/v1;customerv1";

message CreateCustomerRequest {
  string book_id = 1;
  string category = 2;
  string name = 3;
  string corporation = 4;
  string address = 5;
  string memo = 6;
}

message CreateCustomerResponse {
  string id = 1;
  string book_id = 2;
  string name = 3;
}

message SearchCustomerRequest {
  string book_id = 1;
  string category = 2;
  optional string name = 3;
  optional string corporation = 4;
  optional string address = 5;
  optional string memo = 6;
}

message SearchCustomerResponse {
  repeated Customer customers = 1;
}

message Customer {
  string book_id = 1;
  string category = 2;
  string name = 3;
  string corporation = 4;
  string address = 5;
  string memo = 6;
}

message UpdateCustomerRequest {
  string book_id = 1;
  optional string name = 2;
  optional string corporation = 3;
  optional string address = 4;
  optional string memo = 5;
}

message UpdateCustomerResponse {
  string id = 1;
  string book_id = 2;
  string name = 3;
}

message DeleteCustomerRequest {
  string customer_id = 1;
}

message DeleteCustomerResponse {
  string customer_id = 1;
}
